--- a/src/components/Item/Item.style.scss
+++ b/src/components/Item/Item.style.scss
@@ -3,18 +3,34 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100px;
-    border: 1px black solid;
-    border-radius: 3px;
+    // border: 1px black solid;
+    border-top-left-radius: 7px;
+    border-top-right-radius: 7px;
+    text-align: center;
+    overflow: hidden;
+    width: 200px;
+    margin: 20px 30px;
+    background-color: #eee;
+
+    &:hover{
+        box-shadow: 0px 0px 5px 1px gray;
+    }
 
     .item-image {
-        width: 100px;
-        height: 100px;
+        width: 200px;
+        height: 300px;
     }
-    .item-quantity {
-        display: inline;
+    .item-name{
+        font-weight: bold;
+        font-size: large;
+        margin: 10px 0;
     }
-    .item-name {
-        display: inline;
+    .item-price{
+        font-size: medium;
+        margin-bottom: 5px;
+    }
+    .item-platform{
+        font-size: small;
+        margin-bottom: 5px;
     }
 }
