--- a/src/components/Item/Item.style.scss
+++ b/src/components/Item/Item.style.scss
@@ -3,9 +3,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    box-shadow: 0px 0px 3px 0.25px gray;
-    border-top-left-radius: 7px;
-    border-top-right-radius: 7px;
+    border-radius: 5px;
     text-align: center;
     overflow: hidden;
     width: 200px;
@@ -15,25 +13,25 @@
     cursor: pointer;
 
     &:hover{
-        box-shadow: 0px 0px 3px 1px gray;
+        box-shadow: 0px 2px 8px 0px rgba(0,0,0,.25);
     }
 
     .item-image {
-        width: 95%;
-        height: auto;
-        padding: 5px;
+        width: 100%;
     }
     .item-name{
         font-weight: bold;
-        font-size: large;
-        margin: 10px 0;
+        font-size: 14px;
+        margin-top: 10px;
+        margin-bottom: 3px;
+        text-decoration: none;
     }
     .item-price{
-        font-size: medium;
-        margin-bottom: 5px;
+        font-size: 12px;
+        margin: 15px 0;
     }
     .item-platform{
-        font-size: small;
-        margin-bottom: 5px;
+        font-size: 12px;
+        color: #222;
     }
 }
