updated inventory style

--- a/src/components/Inventory/Inventory.style.scss
+++ b/src/components/Inventory/Inventory.style.scss
@@ -1,7 +1,9 @@
-.inventory{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    width: 100vw;
+.wrapper{
+    .inventory{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        margin: 0 10vw;
+    }
 }
