--- a/src/components/Item/Item.style.scss
+++ b/src/components/Item/Item.style.scss
@@ -24,7 +24,7 @@
         font-size: 14px;
         margin-top: 10px;
         margin-bottom: 3px;
-        text-decoration: none;
+        text-transform: capitalize;
     }
     .item-price{
         font-size: 12px;
