--- a/src/components/Navbar/Navbar.style.scss
+++ b/src/components/Navbar/Navbar.style.scss
@@ -1,15 +1,15 @@
-$gray: #5f5f5f;
-$white: #f1f1f1;
-$green: #00b950;
+$gray: #333;
+$white: #ccc;
+
 .navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #333;
+  background-color: $gray;
   color: $white;
   height: 6vh;
   padding: 10px 100px;
-  margin-bottom: 50px;
+  // margin-bottom: 50px;
 
   .logo {
     height: 4vh;
@@ -21,7 +21,7 @@ $green: #00b950;
     color: white;
     cursor: pointer;
     &:hover{
-      color: #ccc;
+      color: $white;
     }
 
   }
