wip restyling and refactoring

--- a/src/components/Footer/Footer.Style.scss
+++ b/src/components/Footer/Footer.Style.scss
@@ -6,6 +6,6 @@
     color: #ddd;
     font-size: 18px;
     padding: 10px 0;
-    margin-top: 50px;
-    height: 40px;
+    // margin-top: 50px;
+    height: 6vh;
 }
