--- a/src/pages/AddItem/AddItem.style.scss
+++ b/src/pages/AddItem/AddItem.style.scss
@@ -14,6 +14,8 @@
         background-color: #ddd;
         padding: 30px 0;
         border-radius: 5px;
+        box-shadow: rgba(0,0,0,.25) 0px 3px 3px 0;
+
         
         .title{
             color: #555;
