changed color scheme

--- a/src/components/Footer/Footer.Style.scss
+++ b/src/components/Footer/Footer.Style.scss
@@ -1,11 +1,14 @@
+$main-color: #13C2C0;
+$second-color: #9C6269;
+$third-color: #FFC646;
 .footer{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #333;
-    color: #ddd;
+    background-color: #6C3739;
+    color: $third-color;
     font-size: 18px;
     padding: 10px 0;
-    // margin-top: 50px;
     height: 6vh;
+    border-top: #FD9429 solid 3px;
 }
