--- a/src/pages/AddItem/AddItem.style.scss
+++ b/src/pages/AddItem/AddItem.style.scss
@@ -1,9 +1,13 @@
+$main-color: #B2D8D7;
+$second-color: #9C6269;
+$third-color: #FFC646;
 .add-item{
     min-height: 84vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    background-color: $main-color;
 
     .add-item-form{
         display: flex;
@@ -29,12 +33,18 @@
             height: 40px;
             font-size: 18px;
             cursor: pointer;
-            background-color: #4CAF50;
+            background-color: $third-color;
             border: none;
-            color: white;
+            color: $second-color;
             text-align: center;
             text-decoration: none;
             display: inline-block;
+            -webkit-transition-duration: 0.4s;
+            transition-duration: 0.4s;
+            &:hover {
+                background-color: $second-color;
+                color: $third-color;
+              }
         }
         .input{
             margin-top: 20px;
