--- a/src/pages/Inventory/Inventory.style.scss
+++ b/src/pages/Inventory/Inventory.style.scss
@@ -1,5 +1,10 @@
+$main-color: #B2D8D7;
+$second-color: #9C6269;
+$third-color: #FFC646;
 .wrapper{
     min-height: 84vh;
+    background-color: $main-color;
+    padding-bottom: 50px;
     .inventory{
         display: flex;
         flex-wrap: wrap;
@@ -13,7 +18,7 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        background-color: #ddd;
+        background-color: $main-color;
 
         .selected-platform{
             margin-top: 10px;
