--- a/src/pages/Inventory/Inventory.style.scss
+++ b/src/pages/Inventory/Inventory.style.scss
@@ -1,10 +1,10 @@
 $main-color: #B2D8D7;
 $second-color: #9C6269;
 $third-color: #FFC646;
+$forth-color: #FD9429;
 .wrapper{
     min-height: 84vh;
     background-color: $main-color;
-    padding-bottom: 50px;
     .inventory{
         display: flex;
         flex-wrap: wrap;
@@ -22,29 +22,23 @@ $third-color: #FFC646;
 
         .selected-platform{
             margin-top: 10px;
+            color:white;
+            font-size: 24px;
+            padding: 3px;
         }
 
         .platforms{
             padding: 15px;
             .platform{
                 color: #eee;
-                background-color: #777;
+                background-color: $forth-color;
                 border-radius: 3px;
                 padding: 5px;
                 margin: 5px;
                 cursor: pointer;
                 &:hover{
-                    background-color: #999;
+                    background-color: $third-color;
                 }
-            }
-            .all{
-                border: 2px solid #fff;
-            }
-            .xbox{
-                border: 2px solid #00AC00;
-            }
-            .playstation{
-                border: 2px solid #004DA7;
             }
         }
 
