updated sign in btn

--- a/src/components/Navbar/Navbar.style.scss
+++ b/src/components/Navbar/Navbar.style.scss
@@ -30,21 +30,15 @@ $white: #ccc;
     flex-direction: row;
     list-style-type: none;
     
-    .google_button{
-      border: 1px solid white;
-      border-radius: 3px;
-      padding: 10px 12px;
-      font-size: 14px;
-        &:hover{
-          border:1px solid #FD9429;
-        }
-    }
-
-    .google_logo{
-      width: 12px;
-      height: 12px;
-      margin-right: 12px;
-    }
+    // .google_button{
+    //   border: 1px solid white;
+    //   border-radius: 3px;
+    //   padding: 10px 12px;
+    //   font-size: 14px;
+    //     &:hover{
+    //       border:1px solid #FD9429;
+    //     }
+    // }
 
     li {
       padding: 0 10px;
