added opacity to logo

--- a/src/components/Navbar/Navbar.style.scss
+++ b/src/components/Navbar/Navbar.style.scss
@@ -14,6 +14,9 @@ $orange: #FD9429;
   .logo {
     height: 4vh;
     cursor: pointer;
+    &:hover{
+      opacity: .8;
+    }
   }
 
   .nav-item {
