fixed image size

--- a/src/components/Item/Item.style.scss
+++ b/src/components/Item/Item.style.scss
@@ -17,7 +17,8 @@
     }
 
     .item-image {
-        width: 100%;
+        width: 200px;
+        height: 250px
     }
     .item-name{
         font-weight: bold;
