--- a/src/pages/Inventory/Inventory.style.scss
+++ b/src/pages/Inventory/Inventory.style.scss
@@ -11,7 +11,8 @@ $forth-color: #FD9429;
         justify-content: center;
         align-items: center;
         margin: 0 10vw;
-        margin-top: 40px;
+        padding: 30px 0;
+        // margin-top: 40px;
     }
     .search-section{
         display: flex;
@@ -47,7 +48,7 @@ $forth-color: #FD9429;
             height: 30px;
             font-size: 20px;
             margin-top: 5px;
-            margin-bottom: 25px;
+            // margin-bottom: 25px;
         }
     }
 }
