--- a/src/components/CartItem/CartItem.style.scss
+++ b/src/components/CartItem/CartItem.style.scss
@@ -22,10 +22,14 @@ $delete-color: #f44336;
     align-items: center;
 
     .cart-item-name {
-      font-size: 18px;
+      font-size: 20px;
       font-weight: bold;
       text-transform: capitalize;
-      margin-bottom: 5px;
+      margin-bottom: 10px;
+      cursor: pointer;
+      &:hover{
+        text-decoration: underline;
+      }
     }
   }
   .cart-item-buttons {
