--- a/src/pages/Cart/Cart.styles.scss
+++ b/src/pages/Cart/Cart.styles.scss
@@ -1,4 +1,5 @@
 $main-color: #B2D8D7;
+$btn-color: #00B14C;
 
 .cart-page{
     min-height: 84vh;
@@ -7,4 +8,24 @@ $main-color: #B2D8D7;
     align-items: center;
     justify-content: center;
     background-color: $main-color;
+
+    .checkout-btn{
+        background-color: $btn-color;
+        border: none;
+        border-radius: 5px;
+        color: white;
+        margin: 0 10px;
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        -webkit-transition-duration: 0.4s;
+        transition-duration: 0.4s;
+        cursor: pointer;
+        &:hover {
+            background-color: white;
+            color: $btn-color;
+          }
+    }
 }
