works on iphone x

--- a/src/components/CartIcon/CartIcon.style.scss
+++ b/src/components/CartIcon/CartIcon.style.scss
@@ -12,4 +12,14 @@
         font-weight: bold;
         color: #FD9429;
     }
+    @media screen and (max-width: 375px){
+        margin-left: 20px;
+        .cart{
+            width: 20px;
+        }
+        .cart-counter{
+            right:  13px;
+            font-size: 9px;
+        }
+    }
 }
