--- a/src/components/Dropdown/Dropdown.style.scss
+++ b/src/components/Dropdown/Dropdown.style.scss
@@ -2,12 +2,8 @@ $gray: #333;
 $white: #ccc;
 $orange: #FD9429;
 
-.dropdown {
-    // position: relative;
-    // display: inline-block;
-    
+.dropdown {    
     &:hover {
-        // display: block;
         .dropdown-content {
             display: block;
         }
@@ -63,5 +59,16 @@ $orange: #FD9429;
             cursor: pointer;
             &:hover {color: $orange;}
           }
+    }
+    @media screen and (max-width: 375px){
+        .dropbtn {
+            font-size: 16px;
+        }
+        .dropdown-content {
+            right: 20px;
+            .profile{
+                padding: 0;
+            }
+        }
     }
   }
