--- a/src/components/Footer/Footer.Style.scss
+++ b/src/components/Footer/Footer.Style.scss
@@ -11,4 +11,9 @@ $third-color: #FFC646;
     padding: 10px 0;
     height: 6vh;
     border-top: #FD9429 solid 3px;
+    
+    @media screen and (max-width: 375px){
+        font-size: 16px;
+        
+    }
 }
