--- a/src/components/Item/Item.style.scss
+++ b/src/components/Item/Item.style.scss
@@ -35,4 +35,8 @@
         font-size: 12px;
         color: #222;
     }
+
+    @media screen and (max-width: 375px){
+        margin: 10px 15px;
+    }
 }
