--- a/src/pages/Inventory/Inventory.style.scss
+++ b/src/pages/Inventory/Inventory.style.scss
@@ -12,7 +12,6 @@ $forth-color: #FD9429;
         align-items: center;
         margin: 0 10vw;
         padding: 30px 0;
-        // margin-top: 40px;
     }
     .search-section{
         display: flex;
@@ -30,6 +29,7 @@ $forth-color: #FD9429;
 
         .platforms{
             padding: 15px;
+            display: flex;
             .platform{
                 color: #eee;
                 background-color: $forth-color;
@@ -48,7 +48,28 @@ $forth-color: #FD9429;
             height: 30px;
             font-size: 20px;
             margin-top: 5px;
-            // margin-bottom: 25px;
+        }
+    }
+
+    @media screen and (max-width: 375px){
+        .inventory{
+            padding: 5px 0;
+        }
+        .search-section{
+            .platforms{
+                padding: 10px;
+                .platform{
+                    padding: 2px;
+                    margin: 2px;
+                    font-size: 14px;
+                }
+            }
+            #search{
+                width: 90vw;
+                height: 30px;
+                font-size: 16px;
+                margin-top: 5px;
+            }
         }
     }
 }
