--- a/src/components/Dropdown/Dropdown.style.scss
+++ b/src/components/Dropdown/Dropdown.style.scss
@@ -71,4 +71,9 @@ $orange: #FD9429;
             }
         }
     }
+    @media screen and (max-width: 320px){
+        .dropdown-content {
+            position: static;
+        }
+    }
   }
