--- a/src/components/Footer/Footer.Style.scss
+++ b/src/components/Footer/Footer.Style.scss
@@ -15,4 +15,7 @@ $third-color: #FFC646;
     @media screen and (max-width: 640px){
         font-size: 16px;
     }
+    @media screen and (max-width: 320px){
+        font-size: 14px;
+    }
 }
