--- a/src/components/Navbar/Navbar.style.scss
+++ b/src/components/Navbar/Navbar.style.scss
@@ -49,9 +49,31 @@ $orange: #FD9429;
       font-size: 16px;
     }
     ul {
-  
+      margin: 0;
+      padding: 0;
       li {
         padding: 0 5px;
+      }
+    }
+  }
+  
+  @media screen and (max-width:320px){
+    justify-content: center;
+    align-items: center;
+    height: auto;
+    .logo{
+      display: none;
+    }
+    .nav-item{
+      font-size: 16px;
+    }
+    ul {
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      li {
+        font-size: 16px;
+        padding:5px;
       }
     }
   }
