--- a/src/pages/Cart/Cart.styles.scss
+++ b/src/pages/Cart/Cart.styles.scss
@@ -14,7 +14,7 @@ $btn-color: #00B14C;
         border: none;
         border-radius: 5px;
         color: white;
-        margin: 0 10px;
+        margin: 0 10px 20px 10px;
         padding: 15px 32px;
         text-align: center;
         text-decoration: none;
@@ -27,8 +27,5 @@ $btn-color: #00B14C;
             background-color: white;
             color: $btn-color;
           }
-    }
-    @media screen and (max-width: 640px){
-
     }
 }
