--- a/src/pages/Inventory/Inventory.style.scss
+++ b/src/pages/Inventory/Inventory.style.scss
@@ -72,4 +72,27 @@ $forth-color: #FD9429;
             }
         }
     }
+    @media screen and (max-width: 320px){
+        .inventory{
+            padding: 5px 0;
+        }
+        .search-section{
+            .platforms{
+                padding: 10px;
+                flex-direction: column;
+                .platform{
+                    padding: 2px;
+                    margin: 2px;
+                    font-size: 14px;
+
+                }
+            }
+            #search{
+                width: 90vw;
+                height: 30px;
+                font-size: 16px;
+                margin-top: 5px;
+            }
+        }
+    }
 }
