finished all flash msgs

--- a/src/components/FlashMsg/FlashMsg.style.scss
+++ b/src/components/FlashMsg/FlashMsg.style.scss
@@ -41,4 +41,8 @@ $error-color:#CB373B;
     .msg-close{
         color: $success-color
     }
+    @media screen and (max-width:414px){
+        opacity: 1;
+        top:0;
+    }
 }
