--- a/src/components/Navbar/Navbar.style.scss
+++ b/src/components/Navbar/Navbar.style.scss
@@ -41,6 +41,8 @@ $orange: #FD9429;
 
   @media screen and (max-width:640px){
     justify-content: center;
+    flex-direction: column-reverse;
+    height: auto;
     padding: 10px;
     .logo{
       display: none;
@@ -50,6 +52,7 @@ $orange: #FD9429;
     }
     ul {
       margin: 0;
+      margin-top: 20px;
       padding: 0;
       li {
         padding: 0 5px;
@@ -71,6 +74,7 @@ $orange: #FD9429;
       flex-direction: column;
       justify-content: center;
       align-items: center;
+      margin-top: 10px;
       li {
         font-size: 16px;
         padding:5px;
