--- a/src/components/Platforms/Platforms.style.scss
+++ b/src/components/Platforms/Platforms.style.scss
@@ -3,7 +3,7 @@ $second-color: #9C6269;
 $third-color: #FFC646;
 $forth-color: #FD9429;
 .search-section{
-    background-color: #333;
+    background-color: #030023;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -21,7 +21,7 @@ $forth-color: #FD9429;
         display: flex;
         .platform{
             color: #eee;
-            background-color: $forth-color;
+            background-color: #00ACE8;
             border-radius: 3px;
             padding: 5px;
             margin: 5px;
