--- a/src/components/Footer/Footer.Style.scss
+++ b/src/components/Footer/Footer.Style.scss
@@ -5,12 +5,12 @@ $third-color: #FFC646;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #6C3739;
+    background-color: #000000;
     color: $third-color;
     font-size: 18px;
     padding: 10px 0;
     height: 6vh;
-    border-top: #FD9429 solid 3px;
+    // border-top: #FD9429 solid 3px;
     
     @media screen and (max-width: 640px){
         font-size: 16px;
