--- a/src/components/Item/Item.style.scss
+++ b/src/components/Item/Item.style.scss
@@ -9,8 +9,9 @@
     width: 200px;
     height: auto;
     margin: 20px 30px;
-    background-color: #eee;
+    // background-color: #eee;
     cursor: pointer;
+    box-shadow: 0px 1px 2px 0px rgba(0,0,0,.25);
 
     &:hover{
         box-shadow: 0px 2px 8px 0px rgba(0,0,0,.25);
