--- a/src/pages/Cart/Cart.styles.scss
+++ b/src/pages/Cart/Cart.styles.scss
@@ -7,12 +7,13 @@ $btn-color: #00B14C;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: $main-color;
+    // background-color: $main-color;
+    background-image: linear-gradient(#070024,#000000);
 
     .checkout-btn{
-        background-color: $btn-color;
+        background-color: #00ACE8;
         border: none;
-        border-radius: 5px;
+        border-radius: 25px;
         color: white;
         margin: 0 10px 20px 10px;
         padding: 15px 32px;
@@ -25,7 +26,7 @@ $btn-color: #00B14C;
         cursor: pointer;
         &:hover {
             background-color: white;
-            color: $btn-color;
+            color: #00ACE8;
           }
     }
 }
