--- a/src/pages/Checkout/Checkout.style.scss
+++ b/src/pages/Checkout/Checkout.style.scss
@@ -3,4 +3,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    background-image: linear-gradient(#070024,#000000);
+    color: white;
 }
