--- a/src/pages/Home/Home.style.scss
+++ b/src/pages/Home/Home.style.scss
@@ -2,23 +2,30 @@ $main-color: #13C2C0;
 $second-color: #9C6269;
 $third-color: #FFC646;
 .home-page{
-    background-color: $main-color;
+    background-color: #070024;
+    // background-image: linear-gradient(#070024,#000000);
+    background-image: url("http://getwallpapers.com/wallpaper/full/2/9/a/525111.jpg#.XkAnCgP9FJM.link");
+    background-position: center;
+    background-size: cover;
     height: 84vh;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
 
     .image{
         height: 60vh;
+        display: none;
     }
 
     .home-btn-container{
         display: flex;
 
         .home-btn {
-            background-color: $second-color;
-            border: none;
+            // background-color: $second-color;
+            background-image: linear-gradient(to right, #006A69, #004368);
+            border-radius: 25px;
+            border: 1px solid $third-color;
             color: $third-color;
             margin: 0 10px;
             padding: 15px 32px;
