--- a/src/pages/Inventory/Inventory.style.scss
+++ b/src/pages/Inventory/Inventory.style.scss
@@ -4,7 +4,8 @@ $third-color: #FFC646;
 $forth-color: #FD9429;
 .wrapper{
     min-height: 84vh;
-    background-color: $main-color;
+    // background-image: linear-gradient(#070024,#000000);
+    background-color: white;
     .inventory{
         display: flex;
         flex-wrap: wrap;
