--- a/src/pages/Home/Home.style.scss
+++ b/src/pages/Home/Home.style.scss
@@ -1,9 +1,5 @@
-$main-color: #13C2C0;
-$second-color: #9C6269;
-$third-color: #FFC646;
 .home-page{
     background-color: #070024;
-    // background-image: linear-gradient(#070024,#000000);
     background-image: url("http://getwallpapers.com/wallpaper/full/2/9/a/525111.jpg#.XkAnCgP9FJM.link");
     background-position: center;
     background-size: cover;
@@ -22,11 +18,10 @@ $third-color: #FFC646;
         display: flex;
 
         .home-btn {
-            // background-color: $second-color;
             background-image: linear-gradient(to right, #006A69, #004368);
             border-radius: 25px;
-            border: 1px solid $third-color;
-            color: $third-color;
+            border: 1px solid #FFC646;
+            color: #FFC646;
             margin: 0 10px;
             padding: 15px 32px;
             text-align: center;
@@ -37,8 +32,8 @@ $third-color: #FFC646;
             transition-duration: 0.4s;
             cursor: pointer;
             &:hover {
-                background-color: $third-color;
-                color: $second-color;
+                background-color: #FFC646;
+                color: #9C6269;
               }
           }
     }
