--- a/src/pages/SelectedItem/SelectedItem.style.scss
+++ b/src/pages/SelectedItem/SelectedItem.style.scss
@@ -1,12 +1,8 @@
-$main-color: #b2d8d7;
-$second-color: #9c6269;
-$third-color: #ffc646;
 .selected-item {
   display: flex;
   justify-content: center;
   align-items: center;
   min-height: 84vh;
-  // background-color: $main-color;
   background-image: linear-gradient(#070024,#000000);
 
 
@@ -32,14 +28,13 @@ $third-color: #ffc646;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    // background-color: #bbb;
     padding-bottom: 20px;
     border-radius: 5px;
     box-shadow: rgba(0, 0, 0, .25) 0px 3px 8px 0;
 
     .input {
       color: black;
-      // background-color: #bbb;
+      background-color: white;
       border: none;
       font-size: 16px;
       margin: 5px 0;
@@ -51,6 +46,7 @@ $third-color: #ffc646;
       margin: 20px 0;
       text-transform: capitalize;
       width: 300px;
+      background-color: white;
     }
 
     .btn {
