added border bottom to nav bar item

--- a/src/components/Navbar/Navbar.style.scss
+++ b/src/components/Navbar/Navbar.style.scss
@@ -24,6 +24,8 @@ $orange: #FD9429;
     cursor: pointer;
     &:hover{
       color: $orange;
+      padding-bottom: 5px;
+      border-bottom: 3px solid $orange;
     }
     
   }
