added flash msg into div and fixed style

--- a/src/components/FlashMsg/FlashMsg.style.scss
+++ b/src/components/FlashMsg/FlashMsg.style.scss
@@ -9,8 +9,7 @@ $error-color:#CB373B;
     border-radius: 10px;
     opacity: .7;
     width: 80vw;
-    position: fixed;
-    left: 10vw;
+    margin-bottom: 5px;
     padding: 10px;
 
     .msg{
