changed text color to white

--- a/src/pages/Cart/Cart.styles.scss
+++ b/src/pages/Cart/Cart.styles.scss
@@ -6,6 +6,10 @@
     justify-content: center;
     background-image: linear-gradient(#070024,#000000);
 
+    .empty-cart-text{
+        color: white;
+    }
+
     .checkout-btn{
         background-color: #00ACE8;
         border: none;
