added background image to assets folder

--- a/src/pages/Home/Home.style.scss
+++ b/src/pages/Home/Home.style.scss
@@ -1,6 +1,6 @@
 .home-page{
     background-color: #070024;
-    background-image: url("http://getwallpapers.com/wallpaper/full/2/9/a/525111.jpg#.XkAnCgP9FJM.link");
+    background-image: url("../../assets/background.jpg");
     background-position: center;
     background-size: cover;
     height: 84vh;
