added border to remove button when hover

--- a/src/components/CartItem/CartItem.style.scss
+++ b/src/components/CartItem/CartItem.style.scss
@@ -49,6 +49,7 @@ $delete-color: #f44336;
       &:hover {
         color: $delete-color;
         background-color: white;
+        border: 1px solid $delete-color;
       }
     }
   }
