--- a/client/src/pages/Register/Register.style.scss
+++ b/client/src/pages/Register/Register.style.scss
@@ -7,8 +7,16 @@ $google-color:#008DF2;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-image: linear-gradient(#070024,#000000);
-
+    .particles {
+        position: fixed;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        z-index: -1;
+        background-color: #070024;
+        background-image: url("../../assets/background.jpg");
+      }
 
     .register-form{
         display: flex;
